--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
 
 <body>
-We are working on a final project for our economics class in Python
+We are working on a final project for our economics class in Python.
+
+
+We are learning to do things like this:
 </body>
+
+<div>
+    <a href="https://plot.ly/~pwalton/7/" target="_blank" title="" style="display: block; text-align: center;"><img src="https://plot.ly/~pwalton/7.png" alt="" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="pwalton:7"  src="https://plot.ly/embed.js" async></script>
+</div>
+
+
 
 </html>
